lab-01: fix response models, fix formatting, add swag comments formatting
