# docs/swagger.yaml
@@ -72,7 +72,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/dto.CreateEmployeeRequest'
+            $ref: '#/definitions/dto.EmployeeResponse'
         "400":
           description: Bad Request
           schema:
@@ -128,6 +128,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -156,9 +160,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.UpdateEmployeeRequest'
+            $ref: '#/definitions/dto.EmployeeResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Not Found
           schema:
             $ref: '#/definitions/response.ErrorResponse'
         "500":
